--- a/templates/tabs/artist_detail.html
+++ b/templates/tabs/artist_detail.html
@@ -2,48 +2,8 @@
 {% load static %}
 
 {% block extra_css %}
-<style>
-.difficulty-banner {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 0;
-    height: 0;
-    border-left: 30px solid transparent;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-}
-
-.tab-card:hover .difficulty-banner {
-    opacity: 1;
-}
-
-.difficulty-banner.diff-1 {
-    border-top: 30px solid #22c55e;
-}
-
-.difficulty-banner.diff-2 {
-    border-top: 30px solid #eab308;
-}
-
-.difficulty-banner.diff-3 {
-    border-top: 30px solid #ef4444;
-}
-
-.difficulty-banner.diff-4 {
-    border-top: 30px solid #000000;
-}
-
-.difficulty-number {
-    position: absolute;
-    top: -25px;
-    right: -10px;
-    color: white;
-    font-weight: bold;
-    font-size: 11px;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.8);
-}
-</style>
+{{ block.super }}
+<link rel="stylesheet" href="{% static 'css/artist_detail.css' %}">
 {% endblock %}
 
 {% block content %}
