--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
         rel="stylesheet">
     <title>{% block title %}Afra's Tabs - Guitar Tablatures{% endblock %}</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script>
         tailwind.config = {
             theme: {
