--- a/templates/tabs/artists_list.html
+++ b/templates/tabs/artists_list.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block body_class %}page-artists{% endblock %}
+
 {% block extra_css %}
 {{ block.super }}
-<link rel="stylesheet" href="{% static 'css/artists_list.css' %}">
 {% endblock %}
 
 {% block content %}
